src/objects/Amr_JobBudgetThreshold__c.object
<CustomObject>
    <fields>
        <fullName>BrandCategoryPosition__c</fullName>
        <formula>BrandPosition__r.Name + Brand__r.Name + ProductCategory__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BrandCategoryPosition</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BrandPosition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BrandPosition</label>
        <referenceTo>MDO_BrandPosition__c</referenceTo>
        <relationshipLabel>Amr JobBudgetThresholds</relationshipLabel>
        <relationshipName>Amr_JobBudgetThresholds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand</label>
        <referenceTo>MDO_Brand__c</referenceTo>
        <relationshipLabel>Amr JobBudgetThresholds</relationshipLabel>
        <relationshipName>Amr_JobBudgetThresholds_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Budget_Limit__c</fullName>
        <label>Budget Limit</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProductCategory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ProductCategory</label>
        <referenceTo>MDO_Category__c</referenceTo>
        <relationshipLabel>Amr JobBudgetThresholds</relationshipLabel>
        <relationshipName>Amr_JobBudgetThresholds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UserEmailId__c</fullName>
        <label>UserEmailId</label>
        <type>Email</type>
    </fields>
    <label>Amr JobBudgetThreshold</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Budget_Limit__c</columns>
        <columns>Brand__c</columns>
        <columns>BrandCategoryPosition__c</columns>
        <columns>BrandPosition__c</columns>
        <columns>ProductCategory__c</columns>
        <columns>UserEmailId__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>JobBudgetThreshold Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Amr JobBudgetThresholds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>